syntax = "proto3";

package calculator.v1;

option go_package = "github.com/zahaar/grcp-calculator/gen/calc/v1;calc";

service Calculator {
	rpc performCalc (mathTaskRequest) returns (mathTaskResponse){}
}

message mathTaskRequest {
	MathMethod method = 1;
	double arg1 = 2;
	double arg2 = 3; 
}

message mathTaskResponse {
	double eq = 1;
}

enum MathMethod {
	ADD = 0;
	SUB = 1;
	MUL = 2;
	DIV = 3;
}